# PythonHelpers

./: .gitignore  .style.yapf  DEPENDENCY_NOTICE.txt  README.md  pyproject.toml  setup.py  style_py_files.py
TheFittingModule/: FitFuncs.py
TheFlashModule/: FileNames.py  FlashData.py  JobProcessFiles.py  JobRunSim.py
ThePlottingModule/: PlotFuncs.py  PlotLICs.py
demos/: demo_logging.py  plot_generated_sfield.py  plot_in_parallel_and_animate.py
demos/ww_plots/: plot_discrete_palettes.py  plot_diverging_palettes.py  plot_sequential_palettes.py
playground/: demo_logging.py  interpolate_and_estimate_gradients.py  plot_generated_sfield.py  plot_in_parallel_and_animate.py  profile_power_spectrum.py
playground/check_performance/: check_scaling_of_numpy_power_and_operator.py
playground/clarify_pbs_job_rules/: create_gadi_jobs.py
playground/demo_plot_funcs/: demo_colorbar.py
playground/performance_tests/: check_scaling_of_numpy_power_and_operator.py  numpy_power_operator_scaling.py
playground/ww_plots/: demo_discrete_palette.py  demo_diverging_palette.py  demo_sequential_palette.py  plot_discrete_palettes.py  plot_diverging_palettes.py  plot_sequential_palettes.py
src/Loki/: print_modules.py
src/Loki.egg-info/: PKG-INFO  SOURCES.txt
src/Loki/TheAnalysisModule/: WWFields.py  WWPDFs.py  WWSpectra.py  func_names.txt
src/Loki/TheBlaModule/: WWJobs.py
src/Loki/TheFittingModule/: FitFuncs.py  func_names.txt
src/Loki/TheFlashModule/: FileNames.py  JobProcessFiles.py  JobRunSim.py  LoadData.py  ReadFlashData.py  func_names.txt
src/Loki/ThePlottingModule/: PlotFuncs.py  TheMatplotlibStyler.py  func_names.txt
src/Loki/TheUsefulModule/: WWArgparse.py  WWDicts.py  WWFnF.py  WWFuncs.py  WWHDF5.py  WWJson.py  WWLists.py  WWTerminal.py  WWVariables.py  func_names.txt
src/Loki/Utils/: TODO.txt  Utils4Dicts.py  Utils4Funcs.py  Utils4IO.py  Utils4Lists.py
src/Loki/WWIO/: IOFnF.py  (+9 more)
src/Loki_python4science.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/TheAnalysisModule/: StatsStuff.py  WWFields.py  WWSpectra.py
src/TheFittingModule/: UserModels.py
src/TheFlashModule/: LoadData.py
src/ThePlottingModule/: TheMatplotlibStyler.py
src/TheUsefulModule/: WWArgparse.py  WWFnF.py  WWFuncs.py  WWLists.py  WWObjs.py  WWTerminal.py
src/jormi/: ww_dicts.py  ww_lists.py  ww_stats.py
tests/: test_Compute1DPDFs.py  test_ComputeJPDFs.py  test_DictUtils.py  test_FieldGradients.py  test_FitData.py  test_ListUtils.py  test_SimpleStats.py  test_Utils4Dicts.py  test_Utils4Lists.py  test_Utils4Vars.py  test_VarUtils.py
tests/Utils/: test_Utils4Dicts.py  test_Utils4Lists.py  test_Utils4Vars.py
tests/WWData/: estimate_1d_pdf.py  estimate_and_fit_jpdf.py  numpy_power_operator_scaling.py  test_computeNorm.py  test_compute_p_norm.py  test_estimated_1d_pdfs.py  test_estimated_2d_jpdf.py
tests/WWFields/: finite_difference_convergence.py  helmholtz_decomposition.py  measure_finite_difference_convergence.py  measure_gradient_convergence.py  test_FieldGradients_convergence.py  test_finite_difference_convergence.py  test_helmholtz_decomposition.py
tests/WWStats/: test_ComputePDFs_compute1DPDF.py  test_ComputePDFs_computeJPDF.py
tests/parallelism/: test_independent_tasks.py
tests/utils/: test_dict_utils.py  test_list_utils.py  test_parallel_utils.py  test_var_utils.py
tests/ww_arrays/: test_2d_array_masking.py  test_compute_p_norm.py  test_estimated_1d_pdfs.py  test_estimated_2d_jpdf.py
tests/ww_data/: test_compute_p_norm.py  test_estimated_1d_pdfs.py  test_estimated_2d_jpdf.py  test_finite_difference_convergence.py  test_hdf5_reformating.py  test_linear_fit.py  test_series_interpolation.py
tests/ww_fields/: test_cartesian_axes.py  test_compute_spectra.py  test_field_operators_3d.py  test_field_slice.py  test_field_types_2d.py  test_field_types_3d.py  test_field_validation_3d.py  test_finite_difference_convergence.py  test_helmholtz_decomposition.py  test_power_spectrum.py  test_uniform_domain_2d.py  test_uniform_domain_3d.py  test_uniform_domain_base.py
tests/ww_io/: test_csv_files.py  test_json_files.py
tests/ww_types/: test_enum_checks.py
tools/: style_py_files.py
unit_tests/utils/: test_dict_utils.py  test_list_utils.py  test_parallel_utils.py  test_var_utils.py
unit_tests/ww_fields/: test_cartesian_axes.py  test_field_slice.py  test_field_types_3d.py  test_field_validation_3d.py  test_uniform_domain_3d.py
unit_tests/ww_io/: test_csv_files.py  test_json_files.py
unit_tests/ww_types/: test_enum_checks.py
utests/: test_dicts.py  test_lists.py
utests/utils/: test_check_types.py  test_dict_utils.py  test_dicts.py  test_list_utils.py  test_lists.py  test_parallel_dispatch.py  test_parallel_utils.py  test_var_utils.py
utests/ww_arrays/: test_compute_array_stats.py  test_compute_p_norm.py  test_compute_safe_log10.py  test_farrays_3d_compute_spectra.py  test_farrays_3d_decompose_farrays.py  test_farrays_3d_farray_operators.py  test_farrays_3d_farray_types.py  test_mask_2d_arrays.py
utests/ww_fields/: test_2d_field_types.py  test_2d_uniform_domain.py  test_3d_field_operators.py  test_3d_field_types.py  test_3d_field_validation.py  test_3d_uniform_domain.py  test_base_uniform_domain.py  test_cartesian_axes.py  test_compute_spectra.py  test_field_operators_3d.py  test_field_slice.py  test_field_types_2d.py  test_field_types_3d.py  test_field_validation_3d.py  test_uniform_domain_2d.py  test_uniform_domain_3d.py  test_uniform_domain_base.py
utests/ww_fns/: test_parallel_dispatch.py
utests/ww_io/: test_csv_files.py  test_csv_io.py  test_json_files.py  test_json_io.py  test_manage_io.py
utests/ww_types/: test_enum_checks.py
validation/: run.py
validation/ww_arrays/: test_estimated_1d_pdfs.py
validation/ww_data/: test_linear_fit.py
validation/ww_fields/: test_helmholtz_decomposition.py
vtests/: run.py  run_all.py
vtests/ww_arrays/: test_estimated_1d_pdfs.py  test_estimated_2d_jpdf.py
vtests/ww_data/: test_linear_fit.py  test_series_interpolation.py
vtests/ww_fields/: test_finite_difference_convergence.py  test_helmholtz_decomposition.py
(+307 files in other folders)
