[project]
name = "jormi"
version = "0.1.0"
description = "jormi (jormungandr): a utility python library"
readme = "README.md"
authors = [
  { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "cmasher>=1.9.2",
  "h5py>=3.13.0",
  "imageio>=2.37.0",
  "matplotlib>=3.10.1",
  "memory-profiler>=0.61.0",
  "mpi4py>=4.0.3",
  "numpy>=2.2.4",
  "pebble>=5.1.1",
  "psutil>=7.0.0",
  "scipy>=1.15.2",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.pyright]
include = ["src", "tests", "playground"]
reportMissingImports = true
reportMissingTypeStubs = false
