[project]
name = "jormi"
version = "0.1.0"
description = "jormi (jormungandr): a utility python library"
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "cmasher>=1.9.2",
  "h5py>=3.13.0",
  "matplotlib>=3.10.1",
  "memory-profiler>=0.61.0",
  "numpy>=2.2.4",
  "pebble>=5.1.1",
  "psutil>=7.0.0",
  "rich>=14.1.0",
  "scipy>=1.15.2",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["utests"]

[tool.pyright]
include = [
    "src",
    "utests",
    "vtests",
    "demos",
]
extraPaths = ["src"]
## for more details: https://docs.basedpyright.com/v1.20.0/configuration/config-files/
reportMissingImports = true # error on imports that cannot be resolved
reportMissingTypeStubs = false # suppress warnings for third-party packages without type stubs (e.g. scipy)
## suppress noisy (i.e., either unavoidable or not useful) rules by setting their severity to "none" (i.e. the lowest severity).
reportExplicitAny = "none" # basedpyright-specific: flags every use of `Any`; unavoidable in numpy/scipy code
reportAny = "none" # basedpyright-specific: flags values inferred as `Any`; noisy cascade of the above
reportUnusedCallResult = "none" # flags calls whose return value is ignored; validation functions are intentionally called for side effects
reportImplicitStringConcatenation = "none" # flags adjacent string literals; valid Python style used in long error messages
reportUnannotatedClassAttribute = "none" # flags class attributes without explicit type annotations; TypeHints/RuntimeTypes classes are intentionally structured this way
reportImplicitOverride = "none" # requires @override decorator on every overriding method; too verbose for this codebase
reportUnknownMemberType = "none" # third-party stubs (matplotlib, numpy, scipy) use **kwargs: Unknown extensively; not actionable
reportUnknownVariableType = "none" # cascade from third-party stubs returning Unknown types; not actionable
reportUnknownArgumentType = "none" # cascade from third-party stubs; not actionable
reportPrivateUsage = "none" # tests legitimately access private members to verify internal state
reportUninitializedInstanceVariable = "none" # pyright does not track variables set in setUp(); false positive for unittest classes
enableTypeIgnoreComments = true # honour "# type: ignore" comments (basedpyright defaults this to false)
reportIgnoreCommentWithoutRule = "none" # test files use bare "# type: ignore" for intentional wrong-type calls
reportUnnecessaryTypeIgnoreComment = "none" # suppress stale ignore comment warnings

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
